# ObjectDetector

./: README.md  __init__.py  cfg_manager.py  default.yaml  example.py  object_detection.py  pyproject.toml
